# Algo_genetique

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
project/: city.py  drawing.py  geneticAlgorithm.py  graph.py  main.py  nearestNeighbor.py
project/GUi/: MainWindow.py
project/ui/: MainWindow.py
project/ui/qt/: Diag_matplotlib.ui  UI_DiagStatistiques.py  UI_MainWindow.py  mainwindow.ui
