[tool.poetry]
name = "algo-genetique"
version = "0.1.0"
description = ""
authors = ["Nathan Strady <nathan.strady.tra@gmail.com>"]
readme = "README.md"
packages = [{include = "project"}]

[tool.poetry.dependencies]
python = "^3.13"
ruff = "^0.8.1"
matplotlib = "^3.9.3"
pre-commit = "^4.0.1"
networkx = "^3.4.2"
pyqt6 = "^6.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["E", "F", "W", "I"]

exclude = [
    "__pycache__",
    "*.pyc",
    "*.egg-info",
    "build/",
    "dist/",
]

fix = false

line-length = 88